recipe POST working as expected
